Closed Bug 1161731 Opened 11 years ago Closed 11 years ago

Various NS_WARNING statements in /gfx & /layout have unnecessary (and log-messying) "\n"

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla40
Tracking Status
firefox40 --- fixed

People

(Reporter: dholbert, Assigned: dholbert)

Details

Attachments

(1 file, 1 obsolete file)

The vsync NS_WARNING statements added in bug 1102631 and bug 1128690 have terminal "\n" newlines, which makes for odd-looking logging like: [Parent 20725] WARNING: Enabling vsync compositor : file /scratch/work/builds/mozilla-central/mozilla-central-11-11-01.13-56/mozilla/gfx/layers/ipc/CompositorParent.cpp, line 669 Logging statements are supposed to be one-liners, but the newline puts the ":" at the start of the second line.
Actually, there are a handful of these across /gfx; I'll just post a patch to fix all of 'em.
Summary: vsync NS_WARNING statements have unnecessary (and log-messying) "\n" → Various NS_WARNING statements in /gfx have unnecessary (and log-messying) "\n"
Attached patch fix (drop \n characters) (obsolete) — Splinter Review
Assignee: nobody → dholbert
Status: NEW → ASSIGNED
Attachment #8601712 - Flags: review?(mstange)
Attachment #8601712 - Flags: review?(mstange) → review+
Updating patch to fix one more instance, in layout/base/nsRefreshDriver.cpp. (the only instance of this in layout.)
Attachment #8601712 - Attachment is obsolete: true
Attachment #8601717 - Flags: review?(mstange)
Attachment #8601717 - Flags: review?(mstange) → review+
Flags: in-testsuite-
Summary: Various NS_WARNING statements in /gfx have unnecessary (and log-messying) "\n" → Various NS_WARNING statements in /gfx & /layout have unnecessary (and log-messying) "\n"
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: