Bug 1161731: Remove newline characters from the ends of NS_WARNING messages in /gfx and /layout. r=mstange